# kafka_study

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sh  kafka-connect.env  zoo-docker-compose.yml
connector/: connect-s3-sink.json  connect-s3-sink.properties  s3sinkconnector.txt
jmx_exporter/: kafka-jmx-metric.yml
kafka/: build.gradle
kafka-python/: entrypoint.sh  pyproject.toml  test.db
kafka-python/kafka_example/: config.py  consumer.py  producer.py
kafka-python/kafka_setting/: config.py  consumer.py
kafka-python/src/: config.py  consumer.py  database.py  main.py  model.py  producer.py  scheduler.py
kafka-ui/: config.yml
terraform/aws/iam/: assume_policy_benx_prod.tf  backend.tf  every_policy.tf
terraform/aws/iam/_module_assume_policy/: main.tf
terraform/aws/init/: init.tf
visualization/grafana/: grafana.db
visualization/prometheus/config/: prometheus.yml
visualization/prometheus/volume/wal/: 00000000  00000001  00000002  00000003
